2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

        * pandora_console_install: Fixed directory install for
	SUSE.

	MERGED FROM 4.0.2

2013-01-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	include/constants.php
	operation/events/events_list.php: Added two new
	criticity modes in the event filter. Critical or warning 
	and not normal

	* operation/menu.php: Delete the metaconsole menu enterprise call
	from operation menu

2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_visual_map.php: Now modules with warning
	status and alert fired are in yellow with orange border, before
	they were red with orange border.
	* include/constants.php: Mew constant for visual map to
	identify modules with warning status and alerts fired.

	MERGED FROM 4.0.2
	
2013-01-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/postgresql.php
	include/db/mysql.php
	include/db/oracle.php: Fixed function get_system_time when 
	timesource is system.

2013-01-14  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/network_components.oracle.sql
	extras/network_components.postgreSQL.sql: Delete old
	alert compound tables from database schemme

	* godmode/category/category.php
	godmode/category/edit_category.php: Adapt the category editor
	to metaconsole

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/menu.php: Moved duplicated config view.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_treeview.php: Now agents appear
	ordered by name.

	PORTER FROM 4.0.3

2013-01-14  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.php: Fix ACLs bug of AD flag
	and aesthetic issues

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* pandoradb_data.sql: Fixed insert for MySQL plugin.
